list : npm install perfect-scrollbar + custom styles ✨

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+[ ] SEO : PHP templates… or pray that Js gets indexed by Google as they said it would. 
+
 [x] gulp : browserify, autoprefixer
 [x] libs : gsap, swiper, nanoscroll …
 [x] router
